Thu Jun 25 21:58:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Force a refresh after loading terrain data so
	  that it gets displayed right away.

Wed Jun 24 12:24:31 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Add a FIXME about problem reading zip files with
	  wxZipInputStream on __WXMSW__.

Wed Jun 24 12:23:44 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: When reading .hgt files, flag a read error if we
	  can't read any data.

Wed Jun 24 12:22:53 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: If we reading terrain data fails, don't continue and
	  try to display it.

Wed Jun 24 12:21:44 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Avoid unnecessary call to OpenEntry() if we're
	  already on the zip entry we want to read.

Mon Jun 22 05:00:49 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Lowercase filenames of .zip entries before checking
	  extensions.

Mon Jun 22 04:36:26 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c: Define MASK_PASSAGE after MASK_NOSURVEY to match
	  order of mask[] array.

Mon Jun 22 04:35:57 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Document that clino is now allowed in diving data.

Mon Jun 22 02:14:08 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,src/datain.c,tests/bug4.svx,tests/diving.pos,
	  tests/diving.svx: Allow clino readings in diving style data,
	  suggested by Andrew Atkinson.  Currently these readings are ignored,
	  but a future version will check that they're consistent with the angle
	  given by the depth gauge and tape, and perform suitable averaging.

Mon Jun 22 00:40:39 GMT 2015  Olly Betts <olly@survex.com>

	* buildmacosx.sh: Hardlink the .msg files in the .dmg rather than
	  shipping two copies of each.

Fri Jun 19 12:20:00 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Jun 19 11:46:10 GMT 2015  Olly Betts <olly@survex.com>
